agenda content updates

--- a/directories/agenda/filters.html
+++ b/directories/agenda/filters.html
@@ -94,6 +94,7 @@
     <select name="" id="filterSpeaker">
       <option value="*">Speakers</option>
           <option value='alberto-abella'>Alberto Abella</option>
+          <option value='mohamed-ali-habouha'>Mohamed Ali Habouha</option>
           <option value='álvaro-alonso'>Álvaro Alonso</option>
           <option value='andrea-battaglia'>Andrea Battaglia</option>
           <option value='martin-bauer'>Martin Bauer</option>
@@ -115,13 +116,14 @@
           <option value='stefano-de-panfilis'>Stefano De Panfilis</option>
           <option value='francisco-de-la-vega'>Francisco de la Vega</option>
           <option value='vincent-demortier'>Vincent Demortier</option>
+          <option value='amal-el-fallah-seghrouchni'>Amal El Fallah Seghrouchni</option>
           <option value='hicham-el-habti'>Hicham El Habti</option>
           <option value='piotr-elmanowski'>Piotr Elmanowski</option>
           <option value='alessandro-errico'>Alessandro Errico</option>
           <option value='gregory-eve'>Gregory Eve</option>
           <option value='rihab-feki'>Rihab Feki</option>
-          <option value='amal-fellah-seghrouchni'>Amal Fellah Seghrouchni</option>
           <option value='jason-fox'>Jason Fox</option>
+          <option value='aawatif-hayar'>Aawatif Hayar</option>
           <option value='jorge-hernandez'>Jorge Hernandez</option>
           <option value='juanjo-hierro'>Juanjo Hierro</option>
           <option value='jung-hoon-lee'>Jung Hoon Lee</option>
