--- a/directories/agenda/program/sitemap.html
+++ b/directories/agenda/program/sitemap.html
@@ -65,18 +65,18 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/registration.html">Registration</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/welcome-coffee.html">Welcome Coffee</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/official-speeches.html">Official Speeches</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/mrs--amal-fellah-seghrouchni--minister-of-digital-transition-and-administrative-reform.html">Mrs. Amal Fellah Seghrouchni, Minister of Digital Transition and Administrative Reform</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/dr--hicham-el-habti--president-of-um6p.html">Dr. Hicham El Habti, President of UM6P</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/mr-enrique-ojeda--ambassador-of-the-kingdom-of-spain-to-the-kingdom-of-morocco.html">Mr Enrique Ojeda, Ambassador of the Kingdom of Spain to the Kingdom of Morocco</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/mr-carlos-pereira-marques--the-ambassador-of-portugal.html">Mr Carlos Pereira Marques, the Ambassador of Portugal</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/amal-el-fallah-seghrouchni--minister-of-digital-transition-and-administrative-reform.html">Amal El Fallah Seghrouchni, Minister of Digital Transition and Administrative Reform</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/hicham-el-habti--president-of-um6p.html">Hicham El Habti, President of UM6P</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/enrique-ojeda--ambassador-of-the-kingdom-of-spain-to-the-kingdom-of-morocco.html">Enrique Ojeda, Ambassador of the Kingdom of Spain to the Kingdom of Morocco</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/carlos-pereira-marques--the-ambassador-of-portugal.html">Carlos Pereira Marques, the Ambassador of Portugal</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/gral-dtion-of-territorial-collectivities--min-of-interior-morocco.html">Gral Dtion of Territorial Collectivities, Min of Interior Morocco</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/mr--chandra-challagonda--ceo-of-the-fiware-foundation.html">Mr. Chandra Challagonda, CEO of the FIWARE Foundation</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/mrs--aawatif-hayaar--president-of-the-smart-morocco-alliance.html">Mrs. Aawatif HAYAAR, President of the SMART Morocco Alliance</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/chandra-challagonda--ceo-of-the-fiware-foundation.html">Chandra Challagonda, CEO of the FIWARE Foundation</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/aawatif-hayar--president-of-the-smart-morocco-alliance.html">Aawatif Hayar, President of the SMART Morocco Alliance</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/break.html">Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/mou-dgct-um6p--smart-morocco-alliance-agreement.html">MoU DGCT-UM6P, SMART Morocco Alliance Agreement</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/mou-um6p-fiware--smart-cities-use-cases-development---training.html">MoU UM6P-FIWARE, Smart Cities use cases development &amp; training</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/best-fiware-use-cases-around-the-world.html">Best FIWARE Use Cases Around the World</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/mr-mohamed-ali-habouha--governor-of-the-province-of-berkane.html">Mr Mohamed Ali Habouha, Governor of the Province of Berkane</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mohamed-ali-habouha--governor-of-the-province-of-berkane.html">Mohamed Ali Habouha, Governor of the Province of Berkane</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lorem-ipsum-dolor-sit-amet--consectetuer-adipiscing-elit-.html">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lorem-ipsum-dolor-sit-amet--consectetuer-adipiscing-elit-.html">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lorem-ipsum-dolor-sit-amet--consectetuer-adipiscing-elit-.html">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
