agenda content updates

--- a/directories/agenda/filters.html
+++ b/directories/agenda/filters.html
@@ -70,6 +70,7 @@
           <option value='process---inference'>Process &amp; Inference</option>
           <option value='robotics'>Robotics</option>
           <option value='security---distributed-trust'>Security &amp; Distributed Trust</option>
+          <option value='signing-ceremony'>Signing Ceremony</option>
           <option value='smart-agriculture---bio-diversity'>Smart Agriculture &amp; Bio-Diversity</option>
           <option value='smart-communities---mobility'>Smart Communities &amp; Mobility</option>
           <option value='smart-energy'>Smart Energy</option>
@@ -83,7 +84,6 @@
   <!-- <div class="filter-element">
     <select name="" id="filterPrefix">
       <option value="*">Types</option>
-          <option value='agreement'>Agreement</option>
           <option value='panel'>Panel</option>
           <option value='pitch'>Pitch</option>
           <option value='training'>Training</option>
