--- a/directories/agenda/program/mou-um6p-fiware--smart-cities-use-cases-development---training.html
+++ b/directories/agenda/program/mou-um6p-fiware--smart-cities-use-cases-development---training.html
@@ -10,12 +10,12 @@
 
 <meta name="description" content="">
 <meta name="keywords" content="FIWARE,Grand Opening">
-<meta http-equiv="refresh" content="1; url=https://www.fiware.org/global-summit/agenda/program-details-summary/?id=mou-um6p-fiware--smart-cities-use-cases-development---training" />
+<meta http-equiv="refresh" content="1; url=https://www.fiware.org/global-summit/agenda" />
 <!-- Open Graph Tags -->
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
 <meta property="og:title" content="FIWARE Global Summit: MoU UM6P-FIWARE, Smart Cities use cases development &amp; training">
-<meta property="og:description" content="Grand Opening">
+<meta property="og:description" content="Grand Opening - Signing Ceremony">
 <meta property="og:url" content="https://www.fiware.org/global-summit/agenda/program?id=mou-um6p-fiware--smart-cities-use-cases-development---training">
 <meta property="og:site_name" content="FIWARE">
 <meta property="og:image" content="https://fiware.org//fgs-2025/mou-um6p-fiware--smart-cities-use-cases-development---training.png">
@@ -28,7 +28,7 @@
 <!-- Twitter Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="FIWARE Global Summit: MoU UM6P-FIWARE, Smart Cities use cases development &amp; training">
-<meta property="twitter:description" content="Grand Opening">
+<meta property="twitter:description" content="Grand Opening - Signing Ceremony">
 <meta name="twitter:site" content="@FIWARE">
 <meta name="twitter:creator" content="@FIWARE">
 <meta name="twitter:image" content="https://fiware.org/fgs-2025/mou-um6p-fiware--smart-cities-use-cases-development---training.png">
@@ -52,7 +52,7 @@ body {
 </head>
 <body>
 	<h1>FIWARE Global Summit: MoU UM6P-FIWARE, Smart Cities use cases development &amp; training</h1>
-	<h2>Grand Opening - </h2>
+	<h2>Grand Opening - Signing Ceremony</h2>
    
 </body>
 </html>
