--- a/directories/agenda/program/sitemap.html
+++ b/directories/agenda/program/sitemap.html
@@ -73,6 +73,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/chandra-challagonda--ceo-of-the-fiware-foundation.html">Chandra Challagonda, CEO of the FIWARE Foundation</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/aawatif-hayar--president-of-the-smart-morocco-alliance.html">Aawatif Hayar, President of the SMART Morocco Alliance</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/break.html">Break</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/signing-ceremony.html">Signing Ceremony</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/mou-dgct-um6p--smart-morocco-alliance-agreement.html">MoU DGCT-UM6P, SMART Morocco Alliance Agreement</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/mou-um6p-fiware--smart-cities-use-cases-development---training.html">MoU UM6P-FIWARE, Smart Cities use cases development &amp; training</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/best-fiware-use-cases-around-the-world.html">Best FIWARE Use Cases Around the World</a></li>
