--- a/directories/agenda/agenda.html
+++ b/directories/agenda/agenda.html
@@ -831,15 +831,9 @@
       <div class="foot">
         <a class="btn-primary" href="./program?id=crowd-management---event-security">
           <span class="material-symbols-outlined">info</span>
-            See details
+            Session details
         </a>
       </div>
-    </div>
-    <div class="foot">
-      <a class="btn-primary" href="./program?id=crowd-management---event-security">
-        <span class="material-symbols-outlined">info</span>
-          See details
-      </a>
     </div>
   </div>
 
@@ -976,15 +970,9 @@
       <div class="foot">
         <a class="btn-primary" href="./program?id=urban-surveillance---smart-policing">
           <span class="material-symbols-outlined">info</span>
-            See details
+            Session details
         </a>
       </div>
-    </div>
-    <div class="foot">
-      <a class="btn-primary" href="./program?id=urban-surveillance---smart-policing">
-        <span class="material-symbols-outlined">info</span>
-          See details
-      </a>
     </div>
   </div>
 
@@ -1015,15 +1003,9 @@
       <div class="foot">
         <a class="btn-primary" href="./program?id=public-space---venue-security">
           <span class="material-symbols-outlined">info</span>
-            See details
+            Session details
         </a>
       </div>
-    </div>
-    <div class="foot">
-      <a class="btn-primary" href="./program?id=public-space---venue-security">
-        <span class="material-symbols-outlined">info</span>
-          See details
-      </a>
     </div>
   </div>
 
@@ -1054,15 +1036,9 @@
       <div class="foot">
         <a class="btn-primary" href="./program?id=sustainability---smart-energy">
           <span class="material-symbols-outlined">info</span>
-            See details
+            Session details
         </a>
       </div>
-    </div>
-    <div class="foot">
-      <a class="btn-primary" href="./program?id=sustainability---smart-energy">
-        <span class="material-symbols-outlined">info</span>
-          See details
-      </a>
     </div>
   </div>
 
@@ -1091,15 +1067,9 @@
       <div class="foot">
         <a class="btn-primary" href="./program?id=smart-water-management">
           <span class="material-symbols-outlined">info</span>
-            See details
+            Session details
         </a>
       </div>
-    </div>
-    <div class="foot">
-      <a class="btn-primary" href="./program?id=smart-water-management">
-        <span class="material-symbols-outlined">info</span>
-          See details
-      </a>
     </div>
   </div>
 
