--- a/directories/agenda/filters.html
+++ b/directories/agenda/filters.html
@@ -96,10 +96,10 @@
           <option value='alberto-abella'>Alberto Abella</option>
           <option value='mohamed-ali-habouha'>Mohamed Ali Habouha</option>
           <option value='álvaro-alonso'>Álvaro Alonso</option>
-          <option value='andrea-battaglia'>Andrea Battaglia</option>
           <option value='martin-bauer'>Martin Bauer</option>
           <option value='jose-benítez'>Jose Benítez</option>
           <option value='massimo-bertoncini'>Massimo Bertoncini</option>
+          <option value='anna-beyer'>Anna Beyer</option>
           <option value='sebastian-blechmann'>Sebastian Blechmann</option>
           <option value='ilaria-bortone'>Ilaria Bortone</option>
           <option value='david-campo'>David Campo</option>
@@ -121,7 +121,6 @@
           <option value='piotr-elmanowski'>Piotr Elmanowski</option>
           <option value='alessandro-errico'>Alessandro Errico</option>
           <option value='gregory-eve'>Gregory Eve</option>
-          <option value='rihab-feki'>Rihab Feki</option>
           <option value='jason-fox'>Jason Fox</option>
           <option value='aawatif-hayar'>Aawatif Hayar</option>
           <option value='jorge-hernandez'>Jorge Hernandez</option>
@@ -139,7 +138,6 @@
           <option value='jure-lampe'>Jure Lampe</option>
           <option value='frédéric-le'>Frédéric Le</option>
           <option value='franck-le-gall'>Franck Le Gall</option>
-          <option value='yuzhen-li'>Yuzhen Li</option>
           <option value='antonella-longo'>Antonella Longo</option>
           <option value='frederico-lopes'>Frederico Lopes</option>
           <option value='fernando-lópez-aguilar'>Fernando López Aguilar</option>
@@ -163,7 +161,6 @@
           <option value='gilles-orazi'>Gilles Orazi</option>
           <option value='fabiano-pallonetto'>Fabiano Pallonetto</option>
           <option value='carlos-pereira-marques'>Carlos Pereira Marques</option>
-          <option value='clara-pezuela'>Clara Pezuela</option>
           <option value='francesca-pignataro'>Francesca Pignataro</option>
           <option value='manfredi-pistone'>Manfredi Pistone</option>
           <option value='mads-pohl-petersson'>Mads Pohl Petersson</option>
@@ -179,7 +176,6 @@
           <option value='raúl-sánchez-mateos-lizano'>Raúl Sánchez-Mateos Lizano</option>
           <option value='tonia-sapia'>Tonia Sapia</option>
           <option value='shuhei-sasano'>Shuhei Sasano</option>
-          <option value='laura-schipani'>Laura Schipani</option>
           <option value='christoph-schneider'>Christoph Schneider</option>
           <option value='harald-sundmaeker'>Harald Sundmaeker</option>
           <option value='lisandra-tamayo'>Lisandra Tamayo</option>
