Update colour for Training

--- a/directories/agenda/agenda.html
+++ b/directories/agenda/agenda.html
@@ -1560,10 +1560,10 @@
     <div class="gridElementTextContainer">
       <a href="./program?id=getting-value-out-of-your-context-data--integrating-ml-models-into-fiware-applications">
         <div class="chip-track">
-          <div class="track cyan">Tech Training</div>
-          <span class="title-type cyan">Training</span>
+          <div class="track light-green">Tech Training</div>
+          <span class="title-type light-green">Training</span>
         </div>
-        <p class="panel-title cyan ">Getting value out of your context Data: Integrating ML models into FIWARE applications</p> 
+        <p class="panel-title light-green ">Getting value out of your context Data: Integrating ML models into FIWARE applications</p> 
         <span class="excerpt">Process &amp; Inference</span>
         <div class="panel-info">
           <div class="date-time">
@@ -2124,10 +2124,10 @@
     <div class="gridElementTextContainer">
       <a href="./program?id=building-real-time-inference-ai-services-with-fiware">
         <div class="chip-track">
-          <div class="track cyan">Tech Training</div>
-          <span class="title-type cyan">Training</span>
+          <div class="track light-green">Tech Training</div>
+          <span class="title-type light-green">Training</span>
         </div>
-        <p class="panel-title cyan ">Building real-time inference AI services with FIWARE</p> 
+        <p class="panel-title light-green ">Building real-time inference AI services with FIWARE</p> 
         <span class="excerpt">Process &amp; Inference</span>
         <div class="panel-info">
           <div class="date-time">
@@ -2660,10 +2660,10 @@
     <div class="gridElementTextContainer">
       <a href="./program?id=concepts-of-basic-security">
         <div class="chip-track">
-          <div class="track cyan">Tech Training</div>
-          <span class="title-type cyan">Training</span>
+          <div class="track light-green">Tech Training</div>
+          <span class="title-type light-green">Training</span>
         </div>
-        <p class="panel-title cyan ">Concepts of Basic Security</p> 
+        <p class="panel-title light-green ">Concepts of Basic Security</p> 
         <span class="excerpt">Security &amp; Distributed Trust</span>
         <div class="panel-info">
           <div class="date-time">
@@ -3256,10 +3256,10 @@
     <div class="gridElementTextContainer">
       <a href="./program-details-summary?id=deployment-of-fiware-on-kubernetes">
         <div class="chip-track">
-          <div class="track cyan">Tech Training</div>
-          <span class="title-type cyan">Training</span>
+          <div class="track light-green">Tech Training</div>
+          <span class="title-type light-green">Training</span>
         </div>
-        <p class="panel-title cyan ">Deployment of FIWARE on Kubernetes</p> 
+        <p class="panel-title light-green ">Deployment of FIWARE on Kubernetes</p> 
         <span class="excerpt">Deployments</span>
         <div class="panel-info">
           <div class="date-time">
@@ -3869,10 +3869,10 @@
     <div class="gridElementTextContainer">
       <a href="./program?id=trust-services-for-data-spaces">
         <div class="chip-track">
-          <div class="track cyan">Tech Training</div>
-          <span class="title-type cyan">Training</span>
+          <div class="track light-green">Tech Training</div>
+          <span class="title-type light-green">Training</span>
         </div>
-        <p class="panel-title cyan ">Trust Services for Data Spaces</p> 
+        <p class="panel-title light-green ">Trust Services for Data Spaces</p> 
         <span class="excerpt">Security &amp; Distributed Trust</span>
         <div class="panel-info">
           <div class="date-time">
@@ -4282,10 +4282,10 @@
     <div class="gridElementTextContainer">
       <a href="./program?id=introduction-to-data-spaces-connector-components">
         <div class="chip-track">
-          <div class="track cyan">Tech Training</div>
-          <span class="title-type cyan">Training</span>
+          <div class="track light-green">Tech Training</div>
+          <span class="title-type light-green">Training</span>
         </div>
-        <p class="panel-title cyan ">Introduction to Data Spaces connector components</p> 
+        <p class="panel-title light-green ">Introduction to Data Spaces connector components</p> 
         <span class="excerpt">Security &amp; Distributed Trust</span>
         <div class="panel-info">
           <div class="date-time">
@@ -4679,10 +4679,10 @@
     <div class="gridElementTextContainer">
       <a href="./program?id=fiware-data-space-connector-deployment-and-use">
         <div class="chip-track">
-          <div class="track cyan">Tech Training</div>
-          <span class="title-type cyan">Training</span>
+          <div class="track light-green">Tech Training</div>
+          <span class="title-type light-green">Training</span>
         </div>
-        <p class="panel-title cyan ">FIWARE Data Space Connector Deployment and Use</p> 
+        <p class="panel-title light-green ">FIWARE Data Space Connector Deployment and Use</p> 
         <span class="excerpt">Deployments</span>
         <div class="panel-info">
           <div class="date-time">
@@ -5027,10 +5027,10 @@
     <div class="gridElementTextContainer">
       <a href="./program?id=options-for-visualization-of-iot-data--wirecloud--grafana--geojson--gis-">
         <div class="chip-track">
-          <div class="track cyan">Tech Training</div>
-          <span class="title-type cyan">Training</span>
+          <div class="track light-green">Tech Training</div>
+          <span class="title-type light-green">Training</span>
         </div>
-        <p class="panel-title cyan ">Options for Visualization of IoT data: Wirecloud, Grafana, GeoJSON (GIS)</p> 
+        <p class="panel-title light-green ">Options for Visualization of IoT data: Wirecloud, Grafana, GeoJSON (GIS)</p> 
         <span class="excerpt">FIWARE Catalog Components</span>
         <div class="panel-info">
           <div class="date-time">
