--- a/directories/locations/index.html
+++ b/directories/locations/index.html
@@ -28,6 +28,40 @@
     </head>
     <body>
         <div id="map"></div>
+                <div class="map-overlay">
+            <details>
+                <summary class="search-button">
+                   <div class="icons"><a class="cat-website"><span class="icon filters"></span></a></div>
+                </summary>
+                <div class="map-overlay-inner">
+                    <div>
+                        <nav id="nav-filter">
+                            <ul>
+                                <li>
+                                    <svg height="24" width="20" xmlns="http://www.w3.org/2000/svg"> 
+                                    <circle r="8" cx="10" cy="14" fill="black" />
+                                    </svg> FIWARE Summit
+                                </li>
+                                <li>
+                                    <svg height="20" width="20" xmlns="http://www.w3.org/2000/svg"> 
+                                    <circle r="5" cx="10" cy="14" fill="cyan" />
+                                    </svg> Hotel
+                                </li>
+                                <li>
+                                    <svg height="20" width="20" xmlns="http://www.w3.org/2000/svg"> 
+                                    <circle r="5" cx="10" cy="14" fill="blue" />
+                                    </svg> Attraction
+                                </li>
+                                <li>
+                                    <svg height="20" width="20" xmlns="http://www.w3.org/2000/svg"> 
+                                    <circle r="5" cx="10" cy="14" fill="green" />
+                                    </svg> Transport
+                                </li>
+                        </nav>
+                    </div>
+                </div>
+            </details>
+        </div>
         <script src="./app_locations_map.js"></script>
     </body>
 </html>
