--- a/directories/locations/index.html
+++ b/directories/locations/index.html
@@ -17,7 +17,8 @@
 
         <link rel="preload" as="image" href="./icons/venue.svg" />
         <link rel="preload" as="image" href="./icons/poi.svg" />
-        <link rel="preload" as="image" href="./icons/transport.svg" />
+        <link rel="preload" as="image" href="./icons/train.svg" />
+        <link rel="preload" as="image" href="./icons/airport.svg" />
         <link rel="preload" as="image" href="./icons/hotel.svg" />
         
         
