--- a/directories/locations/index.html
+++ b/directories/locations/index.html
@@ -48,13 +48,16 @@
                                     <img height="15px" width="15px" src="./icons/venue.svg"> FIWARE Summit
                                 </li>
                                 <li>
-                                    <img height="15px" width="15px" src="./icons/hotel.svg"> Hotel
-                                </li>
-                                <li>
                                     <img height="15px" width="15px" src="./icons/poi.svg"> Attraction
                                 </li>
                                 <li>
-                                    <img height="15px" width="15px" src="./icons/transport.svg"> Transport
+                                    <img height="15px" width="15px" src="./icons/hotel.svg"> Hotel
+                                </li>
+                                <li>
+                                    <img height="15px" width="15px" src="./icons/airport.svg"> Airport
+                                </li>
+                                 <li>
+                                    <img height="15px" width="15px" src="./icons/train.svg"> Station
                                 </li>
                         </nav>
                     </div>
