--- a/directories/people/team/people.html
+++ b/directories/people/team/people.html
@@ -41,7 +41,7 @@
                 <div class='profile-details'>
                 <div class='cat-bio' data-modal='1'>
                     <h6 class='name'>Anna Beyer</h6>
-                    <h4 class='position'>Marketing &amp; Project Manager</h4>
+                    <h4 class='position'>Project Manager</h4>
                     <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                         <h5 class='company-link'>FIWARE Foundation</h5>
                     </a>
