--- a/directories/people/team/index.html
+++ b/directories/people/team/index.html
@@ -187,8 +187,8 @@ var qualetics_setup = {"ajax_url":"https:\/\/www.fiware.org\/wp-admin\/admin-aja
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js"></script>
 
 <!-- Map Libre GL -->
-<script src="https://unpkg.com/maplibre-gl@4.1.2/dist/maplibre-gl.js"></script>
-<link href="https://unpkg.com/maplibre-gl@4.1.2/dist/maplibre-gl.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/maplibre-gl@5.3.0/dist/maplibre-gl.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/maplibre-gl@5.3.0/dist/maplibre-gl.min.css" rel="stylesheet" />
 
 <!-- Include HTML -->
 <script>
