--- a/directories/research-development/project/index.html
+++ b/directories/research-development/project/index.html
@@ -182,8 +182,8 @@ var login_trackingObj = "";var registration_trackingObj = "";var comment_trackin
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js"></script>
 
 <!-- Map Libre GL -->
-<script src="https://unpkg.com/maplibre-gl@4.1.2/dist/maplibre-gl.js"></script>
-<link href="https://unpkg.com/maplibre-gl@4.1.2/dist/maplibre-gl.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/maplibre-gl@5.3.0/dist/maplibre-gl.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/maplibre-gl@5.3.0/dist/maplibre-gl.min.css" rel="stylesheet" />
 
 <!-- Include HTML -->
 <script>
