--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -144,6 +144,7 @@
                         <option value='ufrn'>UFRN</option>
                         <option value='unibit'>UNIBIT</option>
                         <option value='universidad-de-murcia'>Universidad de Murcia</option>
+                        <option value='university-hassan-ii-casablanca'>University Hassan II Casablanca</option>
                         <option value='university-of-cantabria'>University of Cantabria</option>
                         <option value='university-of-salento'>University of Salento</option>
                         <option value='université-lumière-lyon-2'>Université Lumière Lyon 2</option>
