Add Social Media Cards

--- a/directories/events-directory/events.html
+++ b/directories/events-directory/events.html
@@ -2032,8 +2032,8 @@
               </div>
               <div class="speaker-info">
                 <div class="speaker-name">Aawatif Hayar</div>
-                <div class="speaker-job-title">Professor</div>
-                <div class="speaker-company">University Hassan II<br/> Casablanca</div>
+                <div class="speaker-job-title">Chairman</div>
+                <div class="speaker-company">Smart Cities Morocco<br/> Alliance</div>
               </div>
             </div>
             <div class="speaker" data-modal='chandra-challagonda'>
