speakers and events updates

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -133,6 +133,7 @@
                         <option value='senlab'>SenLab</option>
                         <option value='senlab-d-o-o-'>SenLab d.o.o.</option>
                         <option value='seoul-municipality'>Seoul Municipality</option>
+                        <option value='smart-cities-morocco-alliance'>Smart Cities Morocco Alliance</option>
                         <option value='stealth-iss-group'>Stealth-ISS Group</option>
                         <option value='sysman'>Sysman</option>
                         <option value='tecnológico-de-monterrey'>Tecnológico de Monterrey</option>
@@ -144,7 +145,6 @@
                         <option value='ufrn'>UFRN</option>
                         <option value='unibit'>UNIBIT</option>
                         <option value='universidad-de-murcia'>Universidad de Murcia</option>
-                        <option value='university-hassan-ii-casablanca'>University Hassan II Casablanca</option>
                         <option value='university-of-cantabria'>University of Cantabria</option>
                         <option value='university-of-salento'>University of Salento</option>
                         <option value='université-lumière-lyon-2'>Université Lumière Lyon 2</option>
@@ -167,6 +167,7 @@
                         <option value='cdo'>CDO</option>
                         <option value='ceo'>CEO</option>
                         <option value='cga'>CGA</option>
+                        <option value='chairman'>Chairman</option>
                         <option value='chairman-fiware-tsc'>Chairman FIWARE TSC</option>
                         <option value='cio'>CIO</option>
                         <option value='consultant'>Consultant</option>
