--- a/directories/fiware-summit/speakers/people.html
+++ b/directories/fiware-summit/speakers/people.html
@@ -1158,7 +1158,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-45" class="grid-item university-hassan-ii-casablanca   professor ">
+        <div id="item-45" class="grid-item smart-cities-morocco-alliance   chairman ">
             <div class='f-cat active'>
                 <div class='cat-bio' data-modal='45'>
                 <div class='city-photo-container'>
@@ -1170,8 +1170,8 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='45'>Dr. Aawatif Hayar</h6>
-                    <h4 class='position cat-bio' data-modal='45'>Professor</h4>
-                    <h5 class='company-link'><a target='_blank' href='https://www.univh2c.ma/' rel='noopener'>University Hassan II Casablanca</a></h5>
+                    <h4 class='position cat-bio' data-modal='45'>Chairman</h4>
+                    <h5 class='company-link'><a target='_blank' href='https://www.univh2c.ma/' rel='noopener'>Smart Cities Morocco Alliance</a></h5>
                 </div>
                 <div class='icons'>
                         <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/aawatif-hayar-5547395/' rel='noopener'><span
