event-details added share button

--- a/directories/events-directory/event-details/index.html
+++ b/directories/events-directory/event-details/index.html
@@ -989,6 +989,10 @@ z-index: 99999;
 <dl id="venue-name"></dl>
 <dl id="venue-address"></dl>
 <div id="map" style="height:180px;width:294px"></div>
+<a class="btn-secondary" onclick="setClipboard('#')">
+	<span class="material-symbols-outlined">share</span>
+	Share
+</a>
 <script src="../event-details/app_event.js"></script>
 <link rel="stylesheet" href="../event-details/style.css"/>
 <link rel="stylesheet" href="../style.css"/>
