--- a/directories/webinars/sitemap.html
+++ b/directories/webinars/sitemap.html
@@ -62,6 +62,8 @@ li {
 </head>
 <body>
 	<ul>
+		<li><a href="https://www.fiware.org/webinars/support-for-the-dataspace-protocol--dsp--in-the-fiware-data-space-connector.html">Support for the Dataspace Protocol (DSP) in the FIWARE Data Space Connector</a></li>
+		<li><a href="https://www.fiware.org/webinars/solving-the-challenges-of-distributed-operations-within-data-spaces.html">Solving the challenges of Distributed Operations within Data Spaces</a></li>
 		<li><a href="https://www.fiware.org/webinars/fiware-data-space-technologies---reference-use-case.html">FIWARE Data Space Technologies - Reference Use Case</a></li>
 		<li><a href="https://www.fiware.org/webinars/fiware-data-space-technologies---ongoing-and-future-work.html">FIWARE Data Space Technologies - Ongoing and Future Work</a></li>
 		<li><a href="https://www.fiware.org/webinars/deploying-a-fiware-data-space-connector.html">Deploying a FIWARE Data Space Connector</a></li>
