Move maps to map staging

--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@ ul {
           </ul>
           <h2>FIWARE Community</h2>
           <ul>
-            <li>iHubs : &nbsp;<a href="./directories/ihubs/">Cards</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="./directories/ihubs/map.html">Map</a></li>
-            <li>Organizations : &nbsp;<a href="./directories/organisations/">Cards</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="./directories/organisations/map.html">Map</a></li>
-            <li>Smart Cities : &nbsp;<a href="./directories/cities/">Cards</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="./directories/cities/map.html">Map</a></li>
+            <li>iHubs : &nbsp;<a href="./directories/ihubs/">Cards</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="./directories/ihubs/map-staging.html">Map</a></li>
+            <li>Organizations : &nbsp;<a href="./directories/organisations/">Cards</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="./directories/organisations/map-staging.html">Map</a></li>
+            <li>Smart Cities : &nbsp;<a href="./directories/cities/">Cards</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="./directories/cities/map-staging.html">Map</a></li>
 
-            <li>Community : &nbsp;<a href="./directories/community/index.html">Map</a></li>
+            <li>Community : &nbsp;<a href="./directories/community/map-staging.html">Map</a></li>
             <br/>
             <li><a href="./directories/impact-stories/">Impact Stories</a></li>
             <li><a href="./directories/research-development/">Research and Development</a></li>
