Update Tech Training Agenda.

--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -50,16 +50,22 @@
           <option value='smart-governance---digital-pa'>Smart Governance &amp; Digital PA</option>
           <option value='sustainable-smart-city'>Sustainable Smart City</option>
           <option value='tech---trends'>Tech &amp; Trends</option>
+          <option value='tech-training'>Tech Training</option>
     </select>
   </div>
   <div class="filter-element">
     <select name="" id="filterSession">
       <option value="*">Sessions</option>
+          <option value='connection-to-iot'>Connection to IoT</option>
+          <option value='fiware-catalog-components'>FIWARE Catalog Components</option>
+          <option value='ngsi-ld-basics'>NGSI-LD Basics</option>
+          <option value='security---distributed-trust'>Security &amp; Distributed Trust</option>
     </select>
   </div>
   <!-- <div class="filter-element">
     <select name="" id="filterPrefix">
       <option value="*">Types</option>
+          <option value='training'>Training</option>
     </select>
   </div> -->
   <div class="filter-element">
@@ -67,14 +73,10 @@
     <select name="" id="filterSpeaker">
       <option value="*">Speakers</option>
           <option value='alberto-abella'>Alberto Abella</option>
-          <option value='martin-bauer'>Martin Bauer</option>
-          <option value='anna-beyer'>Anna Beyer</option>
+          <option value='david-campo'>David Campo</option>
           <option value='chandra-challagonda'>Chandra Challagonda</option>
-          <option value='stefano-de-panfilis'>Stefano De Panfilis</option>
-          <option value='juanjo-hierro'>Juanjo Hierro</option>
+          <option value='jason-fox'>Jason Fox</option>
           <option value='francisco-meléndez'>Francisco Meléndez</option>
-          <option value='joaquín-salvachúa'>Joaquín Salvachúa</option>
-          <option value='tonia-sapia'>Tonia Sapia</option>
     </select>
   </div>
 </div>
