--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -68,26 +68,36 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/break.html">Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/signing-ceremony.html">Signing Ceremony</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/best-fiware-use-cases-around-the-world.html">Best FIWARE Use Cases Around the World</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/integration-blockchain---fiware-for-dlts-and-trust.html">Integration Blockchain - FIWARE for DLTs and Trust</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lunch.html">Lunch</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/crowd-management---event-security.html">Crowd Management &amp; Event Security</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/digital-twins.html">Digital Twins</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/digital-twin-basic-programming-using-ngsi-ld--crud--registrations--subscriptions.html">Digital Twin basic programming using NGSI-LD: CRUD, Registrations, Subscriptions</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/urban-surveillance---smart-policing.html">Urban Surveillance &amp; Smart Policing</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/digital-twin-intermediate-programming-using-ngsi-ld--temporal-operations--geofencing.html">Digital Twin intermediate programming using NGSI-LD: Temporal Operations, Geofencing</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/public-space---venue-security.html">Public Space &amp; Venue Security</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-iot-agent-integration.html">Introduction to IoT Agent integration</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/sustainability---smart-energy.html">Sustainability &amp; Smart Energy</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-water-management.html">Smart Water Management</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/robotics.html">Robotics</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/practical-1---ngsi-ld-farm-exercises.html">Practical 1 - NGSI-LD Farm exercises</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/practical-2---connection-device--displaying-data.html">Practical 2 - Connection device. Displaying Data</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/closing.html">Closing</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/registration.html">Registration</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/welcome-coffee.html">Welcome Coffee</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/data-spaces-technology.html">Data Spaces Technology</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/business-related.html">Business Related</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/concepts-of-basic-security.html">Concepts of Basic Security</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/innovation-projects-on-data-sharing-in-cities.html">Innovation projects on data sharing in cities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/trust-services-for-data-spaces.html">Trust Services for Data Spaces</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/innovation-projects-on-industrial-data-and-robots.html">Innovation projects on industrial data and robots</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-data-spaces-connector-components.html">Introduction to Data Spaces connector components</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/break.html">Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-scientific-advisory-board.html">FIWARE Scientific Advisory Board</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/digital-twins.html">Digital Twins</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/data-spaces-technology.html">Data Spaces Technology</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lunch.html">Lunch</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/robotics.html">Robotics</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ai---ml.html">AI &amp; ML</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/startup-innovative-technology-based-products-pitches.html">Startup innovative technology-based products Pitches</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/closing.html">Closing</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/robotics.html">Robotics</a></li>
 	</ul>
 </body>
 </html>
